--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="center">
-    <img src="/assets/cooler_panxi.png">
+    <img id="img" src="/assets/cooler_panxi.png">
   </div>
-
+  <script src="index.js"></script>
 </body>
 
 </html>
