--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="center">
-    <img id="img" src="/assets/cooler_panxi.png">
+    <img id="img" src="">
   </div>
   <script src="index.js"></script>
 </body>
