--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>lindo</title>
+  <link rel="icon" type="image/x-icon" href="assets/default_panxi.jpg">
   <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+  <h1 id="main_title">asd</h1>
   <div class="center">
     <img id="img" src="">
   </div>
