--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>lindo</title>
-  <link rel="icon" type="image/x-icon" href="assets/default_panxi.jpg">
-  <link href="style.css" rel="stylesheet">
-</head>
-
-<body>
-  <h1 id="main_title">asd</h1>
-  <div class="center">
-    <img id="img" src="">
-  </div>
-  <script src="index.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
